=== Edge

* Change to list attributes so you can give style/class to list items (taken from PyTextile).  Breaks backwards compatibility.
  
  Before, the style applied to the first list item applied to the entire list.  Now, class/id/style placed
  before the list applies to the list element and after the hash or asterisk applies to the list item.  For
  example:
                                   <ul id="groceries">
    (#groceries)# Milk               <li>milk</li>
    # Eggs                           <li>eggs</li>
    #(optional) granola              <li class="optional">granola</li>
                                   </ul>

* Separated attributes out to have their own mark/store variable and regs.  This way, they won't conflict with captured text or backtracked text. [Jason Garber]

* Added a RedCloth::EXTENSION_LANGUAGE constant so you can tell what version of the parser you are using. [Jason Garber]

* Added a NotCompiledError to give a friendlier message when people just unpack RedCloth into their projects. [Jason Garber]

* Added a pure-ruby version of the parser for times when you can't compile the C or Java extensions.  You should avoid using it if at all possible because it is 32 times slower (and has some other problems, too)! [Jason Garber]

* Ignore spaces and tabs on blank lines between blocks. #120 [Jason Garber]

* Allow HTML tags with quoted attributes to be inside link text.  To do this, I had to remove the possibility that attributes in HTML tags could have spaces around the equals sign or unquoted attributes.  This change also greatly expands the complexity of the state machine, so compilation takes a long time. Sorry. [Jason Garber]

* Many improvements to the LaTeX formatter by Bil Kleb, a NASA scientist who's been working with LaTeX for 20 years.  Thanks, Bil!

=== 4.1.9 / February 20, 2009

* Make compatible with Ruby 1.9.

* Image URLs and image titles can now contain parentheses. #71

* Handle caps properly in link titles. #77
